--- a/index.html
+++ b/index.html
@@ -13,61 +13,63 @@
       <div class="header">
         <h1>ECE A HOSTELLERS</h1>
       </div>
-      <div id="about">
-        <h1 id="des">DESCRIPTION</h1>
-        <hr>
-        <!-- <img src="image.jpg" id="photo1"> -->
-        <img src="image1.jpg" id="photo2">
-        <img src="image2.jpg" id="photo3">
-        <img src="image3.png" id="photo4">
-        <p id="para">Choose the correct word that describes perfectly these legends</p>
-      </div>
-      <div id="container">
-        <div id="score">
+      <div id="content">
+        <div id="about">
+          <h1 id="des">DESCRIPTION</h1>
+          <hr>
+          <!-- <img src="image.jpg" id="photo1"> -->
+          <img src="image1.jpg" id="photo2">
+          <img src="image2.jpg" id="photo3">
+          <img src="image3.png" id="photo4">
+          <p id="para">Choose the correct word that describes perfectly these legends</p>
+        </div>
+        <div id="container">
+          <div id="score">
+            <script type="text/javascript" src="code.js">
+            </script>
+            Score: <span id="scorevalue">0</span>
+          </div>
+          <div id="correct">
+            <script type="text/javascript" src="code.js">
+            </script>
+            Correct
+          </div>
+          <div id="wrong">
           <script type="text/javascript" src="code.js">
           </script>
-          Score: <span id="scorevalue">0</span>
-        </div>
-        <div id="correct">
-          <script type="text/javascript" src="code.js">
+            Try Again
+          </div>
+          <div id="question">
+            <script type="text/javascript" src="code.js">
+            </script>
+          </div>
+          <div id="instruction"><script type="text/javascript" src="code.js">
           </script>
-          Correct
-        </div>
-        <div id="wrong">
-        <script type="text/javascript" src="code.js">
-        </script>
-          Try Again
-        </div>
-        <div id="question">
-          <script type="text/javascript" src="code.js">
-          </script>
-        </div>
-        <div id="instruction"><script type="text/javascript" src="code.js">
-        </script>
-        </div>
-        <div id="choices">
-          <script type="text/javascript" src="code.js">
-          </script>
-          <div class="box" id="box1"></div>
-          <div class="box" id="box2"></div>
-          <div class="box" id="box3"></div>
-          <div class="box" id="box4"></div>
-        </div>
-        <div id="startreset">
-          Start Game
-          <script type="text/javascript" src="code.js">
-          </script>
-        </div>
-        <div id="timeremaining">
-          <script type="text/javascript" src="code.js">
-          </script>
-          Time remaining: <span id="timevalue">60</span> sec
-        </div>
-        <div id="gameover">
-          <br>
-          <p>GAME OVER!</p><p>YOUR SCORE IS <span id="gameovervalue">0</span></p>
-          <script type="text/javascript" src="code.js">
-          </script>
+          </div>
+          <div id="choices">
+            <script type="text/javascript" src="code.js">
+            </script>
+            <div class="box" id="box1"></div>
+            <div class="box" id="box2"></div>
+            <div class="box" id="box3"></div>
+            <div class="box" id="box4"></div>
+          </div>
+          <div id="startreset">
+            Start Game
+            <script type="text/javascript" src="code.js">
+            </script>
+          </div>
+          <div id="timeremaining">
+            <script type="text/javascript" src="code.js">
+            </script>
+            Time remaining: <span id="timevalue">60</span> sec
+          </div>
+          <div id="gameover">
+            <br>
+            <p>GAME OVER!</p><p>YOUR SCORE IS <span id="gameovervalue">0</span></p>
+            <script type="text/javascript" src="code.js">
+            </script>
+          </div>
         </div>
       </div>
     </div>
