--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <img src="image1.jpg" id="photo2">
           <img src="image2.jpg" id="photo3">
           <img src="image3.png" id="photo4">
-          <p id="para">Choose the correct word that describes perfectly these legends</p>
+          <p id="para">Choose the correct words that describes perfectly these legends</p>
         </div>
         <div id="container">
           <div id="score">
